docs: document profiles, extends, version pinning, prerequisites and running
Update the README to reflect the work in this branch:
- Knowledge base profiles: note the embabel profile extends ddd (guide.extends /
  GuideComposition) and what that inherits vs keeps isolated.
- New "Pinning referenced versions" section (tag: for ingested repos,
  PinnedGitHubRepository + ref: for code-browsing tools).
- New "Prerequisites" (JDK 26 via mise, .mvn/jvm.config, Docker, LLM keys) and
  "Running the app" (ingest scripts, profile selection, endpoints, direct run).
- Testing section now cross-references the JDK 26 prerequisite.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>